# Hegemonikon

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .pyre_configuration  .stignore  AGENTS.md  GEMINI.md  GIT_MAIN_UNTRACKED_CLASSIFICATION_2026-05-02.md  README.ja.md  README.md  plugin.yaml  pyproject.toml  pyrightconfig.json  requirements-win.txt  requirements.txt
.claude/: context-inventory.md
.gemini/: GEMINI.md
.github/: copilot-instructions.md
00_核心｜Kernel/: ARCHITECTURE.md  PROOF.md  README.md  STRUCTURE.md
10_知性｜Nous/: README.md
20_機構｜Mekhane/: README.md
30_記憶｜Mneme/: README.md
40_作品｜Poiema/: README.md  README_organon.md
50_外部｜External/: README.md
60_実験｜Peira/: README.md  b2_gemma4_E1_results.json  b2_gemma4_E2_results.json  b2_gemma4_extract.py  b2_gemma4_local_probe.py  compare_search_quality.py  coupled_alpha_theta.py  cw_vs_linear.py  eqbench3_deep_squeeze.py  eqbench3_deep_squeeze.txt  eqbench3_dimensions_extract.txt  eqbench3_elo_extract.txt  eqbench3_generational_analysis.py  eqbench3_generational_analysis.txt  eqbench3_model_dimensions.csv  eqbench3_oblivion_analysis.txt  extract_eqbench3_dims.py  extract_eqbench3_elo.py  extract_eqbench3_oblivion.py  r1_output.txt  (+12 more)
ccl-pl/: ARCHITECTURE_DECISIONS.md  DESIGN.md  README.md  pyproject.toml
ccl-pl/ccl/: __init__.py  __main__.py  cli.py  errors.py  executor.py  extension.py  imports.py  optimizer.py  prelude.py  repl.py  transpiler.py
ccl-pl/ccl-ext-math/: basic.ccl
ccl-pl/ccl-ext-ochema/: core.ccl  core.py
ccl-pl/ccl-vscode/: language-configuration.json  package.json
ccl-pl/ccl/parser/: __init__.py  ast.py  core.py
ccl-pl/ccl/runtime/: __init__.py
ccl-pl/ccl/stdlib/: __init__.py
ccl-pl/ccl/stdlib/hgk/: __init__.py  chronos.py  diastasis.py  krisis.py  methodos.py  orexis.py  telos.py
ccl-pl/editors/vscode/syntaxes/: ccl.tmLanguage.json
ccl-pl/examples/: demo_operators.ccl  hello.ccl  test_extension.ccl  test_ochema.ccl  test_pipeline.ccl
ccl-pl/tests/: test_ccl.py
(+5305 files in other folders)
