[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccl-pl"
version = "0.1.0"
description = "CCL-PL: A general-purpose programming language with categorical structure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hegemonikon Project"}]

[project.scripts]
ccl = "ccl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ccl*"]
